# Tech-Adventure

./: .aipignore  .gitignore  README.md  main.py  pyproject.toml
Async/: target_url.text
Async/Python/: fetch_linkedin.py  pyproject.toml
Async/Rust/: Cargo.toml  main-example.rs
Async/Rust/src/: main.rs
Async/TypeScript/: fetch_linkedin.ts
Async/specs/: spec.md
RegularExpression/: re-problems.md
RegularExpression/practice/: problem21.py
useful_function/: read_json_file.py  regular_expression_examples.py
