[package]
name = "linkedin-async-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# The async runtime
tokio = { version = "1.0", features = ["full"] }
# HTTP client with TLS support
reqwest = { version = "0.12", features = ["json"] }
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }